<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context=".AuthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_card">

        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/auth_dirac_text"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:src="@drawable/dirac_text"
            android:contentDescription="@string/dirac_text_logo" />

        <TextView
            android:id="@+id/auth_description"
            android:layout_below="@id/auth_dirac_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/auth_description"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_description">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_auth_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_username"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_signin"
            android:textColor="@android:color/white"
            android:id="@+id/btn_auth_signin"
            android:layout_below="@+id/auth_password"
            android:layout_alignEnd="@+id/auth_password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/auth_signup"
            android:id="@+id/btn_auth_signup"
            android:onClick="signUp"
            android:layout_below="@+id/btn_auth_signin"
            android:layout_centerHorizontal="true"
            android:padding="5dp" />

    </RelativeLayout>

</RelativeLayout>
